Updated Code Toolkit added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-paper": "^5.8.0",
